# sshconfig-lint

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  tests.yml
Formula/: sshconfig-lint.rb
aur/: PKGBUILD
src/: lexer.rs  lib.rs  main.rs  model.rs  parser.rs  report.rs  resolve.rs
src/rules/: basic.rs  mod.rs
tests/: cli.rs  integration.rs
tests/fixtures/: basic.config  comments_after_directives.config  duplicate_directives.config  duplicate_host.config  missing_identity.config  multiple_includes.config  multiple_patterns.config  quoted_values.config  weak_algorithms.config  wildcard_first.config
tests/snapshots/: integration__snapshot_json_output.snap  integration__snapshot_text_output.snap
