[package]
name = "sshconfig-lint"
version = "0.1.0"
edition = "2024"
authors = ["Noah"]
description = "Linter for OpenSSH client config files"
license = "MIT"
repository = "https://github.com/Noah4ever/sshconfig-lint"
homepage = "https://github.com/Noah4ever/sshconfig-lint"
keywords = ["ssh", "config", "lint", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = ["aur/", "Formula/", "install.sh", ".github/"]

[[bin]]
name = "sshconfig-lint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
glob = "0.3"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
insta = "1"
assert_cmd = "2"
predicates = "3"